--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="logo">
             <img src="logo.png" alt="Logotipo de la Universidad">
         </div>
+        <div class="foto">
+            <img src="foto.jpg" alt="foto usuario">
+        </div>
         <div id="Mostrar">00:00:00</div>
         <button id="Iniciar">Iniciar</button>
         <button id="Detener">Detener</button>
